--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.7.5",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "csv-stringify": "^6.5.1",
     "csv-writer": "^1.6.0",
